force-app/main/default/objects/Hito__c/Hito__c.object-meta.xml
<CustomObject>
    <label>Hito</label>
    <nameField>
        <label>Nombre de Hito</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hitos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>