force-app/main/default/objects/Hito__c/fields/Cumplido__c.field-meta.xml
<CustomField>
    <fullName>Cumplido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cumplido</label>
    <type>Checkbox</type>
</CustomField>