force-app/main/default/objects/Hito__c/fields/Gantt__c.field-meta.xml
<CustomField>
    <fullName>Gantt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gantt</label>
    <referenceTo>Gantt__c</referenceTo>
    <relationshipLabel>Hitos</relationshipLabel>
    <relationshipName>Hitos</relationshipName>
    <type>Lookup</type>
</CustomField>