force-app/main/default/objects/Hito__c/fields/Responsable__c.field-meta.xml
<CustomField>
    <fullName>Responsable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable</label>
    <referenceTo>Responsable__c</referenceTo>
    <relationshipLabel>Hitos</relationshipLabel>
    <relationshipName>Hitos</relationshipName>
    <type>Lookup</type>
</CustomField>